2008-08-22  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/org/pustefixframework/config/project/parser/spring/DerefRequestHandlerParsingHandler.java: 
	* src/org/pustefixframework/config/project/parser/spring/PustefixContextDirectOutputRequestHandlerParsingHandler.java: 
	* src/org/pustefixframework/config/project/parser/spring/PustefixContextXMLRequestHandlerParsingHandler.java: 
	* src/org/pustefixframework/http/dereferer/DerefRequestHandler.java: 
	* src/org/pustefixframework/http/AbstractPustefixRequestHandler.java: 
	* src/org/pustefixframework/http/AbstractPustefixXMLRequestHandler.java: 
	* src/org/pustefixframework/http/PustefixContextXMLRequestHandler.java: 
	Removed old configuration file code from request handlers.
	
	* projects/common/conf/pustefix.xml: 
	Changed derefserver.validtime to 300 seconds.

2008-08-22  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/scripting/ScriptingState.java: 
	* src/de/schlund/pfixcore/util/DummyContextFactory.java: 
	* src/de/schlund/pfixcore/util/StateUtil.java: 
	* src/de/schlund/pfixcore/util/TransformerCallback.java: 
	* src/de/schlund/pfixcore/workflow/app/DefaultIWrapperState.java: 
	* src/de/schlund/pfixcore/workflow/app/IHandlerContainer.java: 
	* src/de/schlund/pfixcore/workflow/app/IHandlerContainerImpl.java: 
	* src/de/schlund/pfixcore/workflow/app/IHandlerContainerManager.java: 
	* src/de/schlund/pfixcore/workflow/app/IWrapperContainer.java: 
	* src/de/schlund/pfixcore/workflow/app/IWrapperContainerImpl.java: 
	* src/de/schlund/pfixcore/workflow/context/DataDrivenPageFlow.java: 
	* src/de/schlund/pfixcore/workflow/context/PageFlowManager.java: 
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/context/ServerContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/ConfigurableState.java: 
	* src/de/schlund/pfixcore/workflow/Context.java: 
	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 