@@ -1,5 +1,19 @@
 /*
- * Place license here
+ * This file is part of PFIXCORE.
+ *
+ * PFIXCORE is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * PFIXCORE is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with PFIXCORE; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
 package org.pustefixframework.config.contextxml.parser;
@@ -111,7 +125,9 @@ public class ContextResourceParsingHandler implements ParsingHandler {
         context.getObjectTreeElement().addObject(crConfig);
             
         BeanDefinitionHolder beanHolder = new BeanDefinitionHolder(beanDefinition, beanName );
-        beanHolder = ScopedProxyUtils.createScopedProxy(beanHolder, beanReg, true);
+        if (!scope.equals("singleton") && !scope.equals("prototype")) {
+            beanHolder = ScopedProxyUtils.createScopedProxy(beanHolder, beanReg, true);
+        }
         context.getObjectTreeElement().addObject(beanHolder);
        
     }
