@@ -1,5 +1,19 @@
 /*
- * Place license here
+ * This file is part of PFIXCORE.
+ *
+ * PFIXCORE is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * PFIXCORE is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with PFIXCORE; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
 package org.pustefixframework.config.contextxml.parser;
@@ -14,7 +28,9 @@ import org.pustefixframework.config.contextxml.parser.internal.PageRequestConfig
 import org.pustefixframework.config.contextxml.parser.internal.ScriptingStatePathInfo;
 import org.pustefixframework.config.contextxml.parser.internal.StateConfigImpl;
 import org.pustefixframework.config.generic.ParsingUtils;
+import org.springframework.aop.scope.ScopedProxyUtils;
 import org.springframework.beans.factory.config.BeanDefinition;
+import org.springframework.beans.factory.config.BeanDefinitionHolder;
 import org.springframework.beans.factory.support.BeanDefinitionBuilder;
 import org.springframework.beans.factory.support.BeanDefinitionRegistry;
 import org.springframework.beans.factory.support.DefaultBeanNameGenerator;
@@ -150,7 +166,18 @@ public class PageRequestParsingHandler implements ParsingHandler {
                     stateBeanName = nameGenerator.generateBeanName(beanDefinition, beanRegistry);
                     pageConfig.setBeanName(stateBeanName);
                 }
-                beanRegistry.registerBeanDefinition(stateBeanName, beanDefinition);
+                if (stateConfig.getScope().equals("singleton") || stateConfig.getScope().equals("prototype")) {
+                    beanRegistry.registerBeanDefinition(stateBeanName, beanDefinition);
+                } else {
+                    BeanDefinitionHolder beanHolder = new BeanDefinitionHolder(beanDefinition, stateBeanName);
+                    beanHolder = ScopedProxyUtils.createScopedProxy(beanHolder, beanRegistry, true);
+                    beanRegistry.registerBeanDefinition(beanHolder.getBeanName(), beanHolder.getBeanDefinition());
+                    if (beanHolder.getAliases() != null) {
+                        for (String alias : beanHolder.getAliases()) {
+                            beanRegistry.registerAlias(beanHolder.getBeanName(), alias);
+                        }
+                    }
+                }
             }
         }
     }
